- bios/tosvars.S aciavecs.S: Moved kbdvbase and iorec structures and buffers
  from tosvars.S to aciavecs.S since they are not officialially documented
  system variables. (THH)

2005-05-19
- bios/bios.c: Bconout() did not work correctly with characters >= 128. (THH)
- bios/startup.S: Changed the size of the initial stack from 16384 to 2048
  bytes - that is still more than enough, I hope. (THH)

2005-05-22
- aes/gemgsxif.c aes/geminput.*: Fixed the problem that the mouse was not
  moving in certain programs. (THH)

2005-05-23
- bios/screen.c: Setscreen() now also reinitializes the font settings when the
  resolution changes. (THH)
- bios/bios.c startup.S: Some code cleanup - renamed startup() to bios_init(),
  removed unused code, etc. (THH)

2005-05-30
- desk/desk_rsc.c: Increased the size of a string buffer so that Greek and
  Spanish translations don't cause a buffer overflow anymore.
- Updated the documentation for version 0.8

* Release: 0.8

2005-06-20
- cli/command.c: Fixed some typos (thanks to Eero Tammien for the patch). (THH)
- po/fi.po: Added Finnish translation made by Eero Tammien. (THH)

2005-07-05
- tools/tos-lang-change.c: Added Eero Tamminen's TOS language change program.
- country.mk bios/country.h bios/keyb_se.h: Added Swedish/Finnish keyboard
  table (THH).
- tools/mkheader.awk: Fixed OS_PAL to contain the right PAL/NTSC flag. (THH)
- desk/desk_rsc.c: Adjusted some dialog string positions so that the Finnish
  and French translation fit better into the dialogs. (THH)

2005-07-11
- aes/gemgrlib.c: Fixed stupid bug that prevented window dragging when EmuTOS
  was build with UNIQUE=xx option. (THH)

2005-07-12
- bios/startup.S: Changed size of initial stack back to > 8000 words. This is
  a work-around for some strange crashes with FreeMiNT and GFA-Basic. Someday,
  somebody with a lot of spare time should try to find the real cause for these
  crashes... (THH)

2005-07-22
- vdi/vdi_control.c: Implemented vs_color and vq_color (for ST/STE). (THH)