@@ -1,0 +1,14 @@
+/*
+ * Copyright 2005 by The EmuTOS development team.
+ *
+ * This file is distributed under the GPL, version 2 or at your
+ * option any later version.  See doc/license.txt for details.
+ */
+
+extern WORD MAP_COL[], REV_MAP_COL[];
+
+extern WORD REQ_COL[16][3];
+
+extern void init_colors(void);
+extern void vs_color(Vwk *vwk);
+extern void vq_color(Vwk *vwk);
